--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ scaffolding.addCloudProviderOverride("☁️ DAY", providers["local"] || null);
       await scaffolding.loadProject(projectData);
       setProgress(1);
       loadingScreen.hidden = true;
-      if (false) {
+      if (true) {
         scaffolding.start();
       } else {
         launchScreen.hidden = false;
